# ANC

./: .gitignore  COMPARISON_FINAL.md  DESCOBERTAS_PROYECTO.md  KENDALL_TAU_CHANGES.md  README.md  TAEG.code-workspace  cleanup_files.ps1  compare_all_methods.py  compare_primera_simple.py  evaluate_existing_outputs.py  example_usage.py  improved_graph_builder.py  primera_event_consolidation.py  primera_standard_mds.py  pyproject.toml  requirements.txt  run_all_models.py  run_taeg.py  test_basic.py  test_multi_doc_format.py  test_other_models.py
notebooks/: exploratory_analysis.ipynb
outputs/: comparison_report.txt  evaluation_results_lexrank-ta.json  evaluation_results_lexrank.json
src/: consolidate_abstractive.py  evaluator.py  main.py  preprocess.py  summarize_baseline.py  summarizer.py  utils.py
