[tool.poetry]
name = "anc-primera"
version = "2.0.0"
description = "Abstractive Narrative Consolidation with PRIMERA - Extending TAEG with neural generation for multi-perspective account unification"
authors = ["ANC Team <anc@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# Deep Learning & Transformers
transformers = "^4.41.2"
torch = "^2.3.0"
accelerate = "^0.30.0"
sentencepiece = "^0.2.0"
# TAEG Baseline Dependencies
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
lexrank = "^0.1.0"
nltk = "^3.8.1"
scipy = "^1.13.1"
# Evaluation
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
# Utilities
pandas = "^2.2.2"
numpy = "^1.26.4"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"